--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+encrypt = []
+
 [dependencies]
 thiserror = "1"
 netdev = { version = "0.25", features = ["serde"] }
