--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = {version = "1.0"}
 public-ip-address = { version = "0.2" }
 directories = "5.0"
+log = "0.4"
 cocoon = { version = "0.4", optional = true }
 mid = { version = "2.0", optional = true }
 
