--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ opt-level = 3
 [dev-dependencies]
 colored = "2.1"
 chrono = "0.4"
+env_logger = "0.11"
 tokio = { version = "1", features = ["full"] }
 
 [profile.release]
