--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-# default = ["encryption", "async"]
 encryption = ["dep:cocoon", "dep:mid"]
-async = []
+blocking = ["maybe-async/is_sync", "public-ip-address/blocking"]
 
 [dependencies]
 thiserror = "1"
 netdev = { version = "0.25", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = {version = "1.0"}
-public-ip-address = { version = "0.2" }
+public-ip-address = { version = "0.3" }
 directories = "5.0"
 log = "0.4"
+maybe-async = "0.2"
 cocoon = { version = "0.4", optional = true }
 mid = { version = "2.0", optional = true }
 
@@ -30,7 +30,8 @@ opt-level = 3
 colored = "2.1"
 chrono = "0.4"
 env_logger = "0.11"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio-test = "0.4"
 
 [profile.release]
 opt-level = 3
@@ -38,20 +39,15 @@ debug = false
 
 [[example]]
 name = "simple"
-required-features = []
+required-features = ["blocking"]
 doc-scrape-examples = true
 
 [[example]]
 name = "persist"
-required-features = []
+required-features = ["blocking"]
 doc-scrape-examples = true
 
 [[example]]
 name = "callback"
-required-features = []
-doc-scrape-examples = true
-
-[[example]]
-name = "async"
-required-features = ["async"]
+required-features = ["blocking"]
 doc-scrape-examples = true
