--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ log = "0.4"
 maybe-async = "0.2"
 cocoon = { version = "0.4", optional = true }
 mid = { version = "2.0", optional = true }
+net-route = "0.4"
 
 [profile.dev.package.cocoon]
 opt-level = 3
